# rh--turnover

./: .coverage  .dockerignore  .env.example  .gitignore  404.html  Dockerfile  PIPELINE.md  README.md  create_db.py  index.html  mkdocs.yml  pyproject.toml  query_db.py  render.yaml  save_model.py  sitemap.xml
.github/workflows/: ci-dev.yml  ci-prod.yml  ci-staging.yml  ci.yml
api/: index.html
app/: main.py  model.pkl  model.py  schemas.py
docs/: api.md  index.md  maintenance.md  model.md
maintenance/: index.html
model/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api/: index.html
site/maintenance/: index.html
site/model/: index.html
site/search/: search_index.json
src/: config.py  database.py
src/data/: loader.py  preprocessing.py
src/features/: build_features.py  encoding.py
src/models/: evaluate.py  train.py
tests/: test_app.py  test_build_features.py  test_encoding.py  test_loader.py  test_model.py  test_preprocessing.py
