[project]
name = "rh-turnover"
version = "0.1.0"
description = "Projet 4 pour Openclassroom"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=1.22,<2.4",
    "pandas>=1.5",
    "matplotlib>=3.0",
    "seaborn>=0.12",
    "scikit-learn>=1.0",
    "scipy>=1.10",
    "shap>=0.51.0",
    "statsmodels>=0.14",
    "xgboost>=3.2.0",
    "imbalanced-learn>=0.12",
    "catboost>=1.2",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "psycopg2-binary>=2.9.12",
]

[tool.uv]
no-build-package = ["llvmlite", "numba"]
constraint-dependencies = [
    "numba==0.62.1",
    "llvmlite==0.45.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
